fixed dropdown menu visibility on index.page

--- a/css/eslx.css
+++ b/css/eslx.css
@@ -27,7 +27,7 @@ body {
 }
 
 .navbar-topstripe {
-	height:73px;
+	min-height:73px;
 }
 
 .navbar-goldstripe {
